Fix both side bars spacing

--- a/style.css
+++ b/style.css
@@ -76,12 +76,6 @@ h3 {
   font-family: var(--main-font-family);
 }
 
-h4 {
-  font-weight: bold;
-  font-size: 30px;
-  font-family: var(--main-font-family);
-}
-
 p {
   font-style: italic;
   font-weight: bold;
@@ -91,7 +85,7 @@ p {
 
 .container {
   display: grid;
-  grid-template: var(--topbar-height) calc(100vh - var(--topbar-height)) / 300px 1fr;
+  grid-template: var(--topbar-height) calc(100vh - var(--topbar-height)) / 200px 1fr;
 }
 
 .sidebar {
@@ -150,7 +144,7 @@ li {
 }
 
 #big-icon {
-  transform: scale(1);
+  transform: scale(1.5);
 }
 
 .topbar {
@@ -285,7 +279,7 @@ li {
   display: grid;
   grid-template: 1fr 10fr 1fr 10fr / 1fr;
   padding-left: 0px;
-  gap: var(--item-spacing);
+  gap: calc(var(--item-spacing)-10px);
   padding-top: 50px;
   overflow: auto;
   
